src/snapshots/tptp__tests__fof_atomic_formula.snap
---
source: src/tests.rs
expression: parsed
---
Defined(
    Plain(
        DefinedPlainFormula(
            Constant(
                DefinedConstant(
                    DefinedFunctor(
                        AtomicDefinedWord(
                            DollarWord(
                                LowerWord(
                                    "true",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
