src/snapshots/tptp__tests__fof_binary_formula.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Nonassoc(
    BinaryNonassoc {
        left: Unitary(
            Atomic(
                Plain(
                    PlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        op: LRImplies,
        right: Unitary(
            Atomic(
                Plain(
                    PlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "q",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
