src/snapshots/tptp__tests__fof_defined_atomic_formula-3.snap
---
source: src/tests.rs
expression: parsed

---
Plain(
    DefinedPlainFormula(
        Constant(
            DefinedConstant(
                DefinedFunctor(
                    AtomicDefinedWord(
                        DollarWord(
                            LowerWord(
                                "false",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
