src/snapshots/tptp__tests__fof_defined_atomic_formula-5.snap
---
source: src/tests.rs
expression: parsed
---
Infix(
    DefinedInfixFormula {
        left: Function(
            Plain(
                Function(
                    Functor(
                        Lower(
                            LowerWord(
                                "f",
                            ),
                        ),
                    ),
                    Arguments(
                        [
                            Variable(
                                Variable(
                                    UpperWord(
                                        "X",
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ),
        op: DefinedInfixPred(
            InfixEquality,
        ),
        right: Function(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "c",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
