src/snapshots/tptp__tests__fof_defined_atomic_term.snap
---
source: src/tests.rs
expression: parsed
---
DefinedAtomicTerm(
    DefinedPlainTerm(
        DefinedConstant(
            DefinedFunctor(
                AtomicDefinedWord(
                    DollarWord(
                        LowerWord(
                            "defined_atomic_term",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
